# testing-boost-exercise

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: testing.yaml
data/: m10.csv  m100.csv  m250.csv  m3.csv  m50.csv
src/: Configuration.cpp  Configuration.hpp  MatrixSolver.cpp  MatrixSolver.hpp  main.cpp  matrixIO.cpp  matrixIO.hpp
tests/: ConfigurationTest.cpp  MatrixIOTest.cpp  MatrixSolverTest.cpp  testconfig.yml
